--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "odem",
-  "version": "1.0.0",
-  "license": "MIT",
+  "name": "vite-demo",
+  "version": "0.0.0",
   "scripts": {
-    "dev": "node .build/dev.js",
-    "test": "node test.js"
+    "dev": "node -r esm .electron/scripts/dev.js"
+  },
+  "dependencies": {
+    "vue": "^3.0.0-rc.1"
   },
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.0.0-rc.1",
     "chalk": "^4.1.0",
     "chokidar": "^3.4.2",
-    "electron": "^10.1.2",
-    "esbuild": "^0.7.7",
-    "rollup": "^2.28.2",
-    "vite": "^1.0.0-rc.4"
+    "electron": "^10.1.3",
+    "esbuild": "^0.7.8",
+    "esm": "^3.2.25",
+    "vite": "^1.0.0-rc.1"
   }
 }
