--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "vite-demo",
-  "version": "0.0.0",
+  "name": "electron-vite",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "node -r esm .electron/scripts/dev.js"
+    "dev": "node -r esm .electron/dev.js"
   },
   "dependencies": {
+    "electron-debug": "^3.1.0",
     "vue": "^3.0.0-rc.1"
   },
   "devDependencies": {
@@ -12,6 +13,7 @@
     "chalk": "^4.1.0",
     "chokidar": "^3.4.2",
     "electron": "^10.1.3",
+    "electron-devtools-installer": "^3.1.1",
     "esbuild": "^0.7.8",
     "esm": "^3.2.25",
     "vite": "^1.0.0-rc.1"
